@@ -1,21 +1,19 @@
 package edu.bsu.cs;
 
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URLConnection;
-import java.net.URLEncoder;
-import java.nio.charset.Charset;
+import java.net.*;
+import java.nio.charset.StandardCharsets;
 
 public class GetJsonData {
 
+    public static URLConnection connectToWikipedia(String articleTitle) throws IOException {
+        String encodedTitle = URLEncoder.encode(articleTitle, StandardCharsets.UTF_8);
+        String urlString = "https://en.wikipedia.org/w/api.php?action=query&format=json" +
+                "&prop=revisions&titles=" + encodedTitle +
+                "&rvprop=timestamp|user&rvlimit=4&redirects";
 
-    public static URLConnection connectToWikipedia(String articleTitle) throws IOException, URISyntaxException {
-        String encodedUrlString = "https://en.wikipedia.org/w/api.php?action=query&format=json&prop=revisions&titles=" +
-                URLEncoder.encode(articleTitle, Charset.defaultCharset()) +
-                "&rvprop=timestamp" + URLEncoder.encode("|",Charset.defaultCharset()) + "user&rvlimit=4&redirects";
-        URI uri = new URI(encodedUrlString);
-        URLConnection connection = uri.toURL().openConnection();
+        URL url = new URL(urlString);
+        URLConnection connection = url.openConnection();
         connection.setRequestProperty("User-Agent",
                 "FirstProject/0.1 (academic use; https://example.com)");
         connection.connect();
@@ -23,7 +21,7 @@ public class GetJsonData {
     }
 
     public static String readJsonAsStringFrom(URLConnection connection) throws IOException {
-        return new String(connection.getInputStream().readAllBytes(), Charset.defaultCharset());
+        return new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     }
 
 
